# CodeReviewAI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  part2_answer.txt  pyproject.toml  run_fastapi.sh
src/: analyzer.py  logger.py  main.py  repo_fetcher.py
tests/: func_test.py  test_main.py
