[tool.poetry]
name = "CodeReviewAI"
version = "0.1.0"
description = ""
authors = ["hruntov <hruntov@outlook.com>"]
packages = [
    { include = "src" },
    { include = "tests" },
]

[tool.poetry.dependencies]
python = "^3.9.13"
openai = "^1.52.0"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
pygithub = "^2.4.0"
httpx = "^0.27.2"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
